--- a/css/style.css
+++ b/css/style.css
@@ -61,19 +61,6 @@ img {
     padding-right: 1rem;
 }
 
-@media screen and (max-width: 768px) {
-    .container {
-        width: 50%;
-        max-width: 100vh;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .container {
-        width: 23%;
-    }
-}
-
 /* TEXT */
 .text-center {
     text-align: center;
@@ -137,12 +124,39 @@ img {
     margin-bottom: 2.5rem;
 }
 
-@media screen and (max-width: 480px) {
-    .why-us {
-        background-color: black;
-    }
-}
-
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+ @media screen and (max-width: 1160px) {
+    .container {
+        width: 100%;
+    }
+}
+
+ @media screen and (max-width: 768px) {
+    .container {
+        width: 50%;
+        max-width: 100vh;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
+        width: 20%;
+    }
+
+    .row {
+        flex-direction: column;
+        align-items: center;
+        gap: 100px;
+    }
+
+    .steps {
+        margin-bottom: 0;
+    }
+
+    .why-us {
+        background-color: black;
+        margin-bottom: 0;
+    }
+}
