--- a/css/style.css
+++ b/css/style.css
@@ -135,20 +135,21 @@ img {
 
  @media screen and (max-width: 768px) {
     .container {
-        width: 50%;
         max-width: 100vh;
     }
 }
 
 @media screen and (max-width: 480px) {
-    .container {
-        width: 20%;
-    }
 
     .row {
         flex-direction: column;
         align-items: center;
         gap: 100px;
+    }  
+
+    .col {
+        width: 100%;
+        padding: 0;
     }
 
     .steps {
